--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
     <br><br>
     <form>
-        <input type="text" name="" placeholder="Ведденый текст отображен курсивом"><br>
-        <input type="text" name="" placeholder="Ведденый текст отображен курсивом"><br>
-        <input type="text" name="" placeholder="Ведденый текст отображен курсивом"><br>
+        <input type="text" name="" id="changed" placeholder="Ведденый текст отображен курсивом"><br>
+        <input type="text" name="" id="changed" placeholder="Ведденый текст отображен курсивом"><br>
+        <input type="text" name="" id="changed" placeholder="Ведденый текст отображен курсивом"><br>
     </form>
     <div class="divtwo">
         <img src="img/3.jpg" class="imgtree" />
